--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "build-tsc": "tsc -w",
     "run-watch": "nodemon ./dist/app.js",
+    "build": "tsc",
+    "start": "node ./dist/app.js",
     "dev": "concurrently \"npm:build-tsc\"  \"npm:run-watch\""
   },
   "author": "shadi almohtaseb",
