--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^29.7.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
     "concurrently": "^8.2.1",
