--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-tsc": "tsc -w",
     "run-watch": "nodemon ./dist/app.js",
     "build": "tsc",
-    "start": "node ./dist/app.js",
+    "test": "jest",
     "dev": "concurrently \"npm:build-tsc\"  \"npm:run-watch\""
   },
   "author": "shadi almohtaseb",
@@ -25,7 +25,6 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "jest": "^29.7.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
@@ -39,6 +38,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
     "concurrently": "^8.2.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
 }
