--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "note-app-backend",
   "version": "0.0.0",
   "description": "note app backend",
-  "main": "./dist/app.js",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
     "build-tsc": "tsc -w",
-    "run-watch": "nodemon ./dist/app.js",
+    "run-watch": "nodemon ./dist/index.js",
     "build": "tsc",
     "test": "jest",
     "dev": "concurrently \"npm:build-tsc\"  \"npm:run-watch\""
