--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
   "scripts": {
     "build-tsc": "tsc -w",
     "run-watch": "nodemon ./dist/index.js",
-    "build": "tsc",
     "test": "jest",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "dev": "concurrently \"npm:build-tsc\"  \"npm:run-watch\""
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "shadi almohtaseb",
   "license": "ISC",
   "dependencies": {
@@ -39,6 +46,8 @@
     "@types/node": "^20.5.6",
     "concurrently": "^8.2.1",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.1"
   }
 }
